<resources>
    <string name="app_name">Wi-Fi Scan</string>
    <string name="menu_settings">Settings</string>
    <string name="tab_title_wifi_list">WiFi Scan</string>
    <string name="tab_title_person_centre">Person Center</string>
    <string name="tab_title_partership">ParterShip</string>
    <string name="tab_title_settings">settings</string>
    <string name="wifi_hub_user_name">Name</string>
    <string name="wifi_hub_user_password">Password</string>
    <string name="progress_scanning">Scanning</string>
    <string name="wifi_secured_first_item">Secured with %1$s</string>
    <string name="wifi_secured_second_item">, secured with %1$s</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">Avoided poor Internet connection</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_wps_available_first_item">WPS available</string>
    <string name="wifi_wps_available_second_item">\u0020(WPS available)</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_quick_toggle_title">Wi-Fi</string>
    <string name="wifi_quick_toggle_summary">Turn on Wi-Fi</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="wifi_settings_category">Wi-Fi settings</string>
    <string name="wifi_settings_summary">Set up &amp; manage wireless access points</string>
    <string name="wifi_starting">Turning on\u2026</string>
    <string name="wifi_stopping">Turning off\u2026</string>
    <string name="wifi_error">Error</string>
    <string name="wifi_in_airplane_mode">In airplane mode</string>
    <string name="wifi_fail_to_scan">Unable to scan for networks</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_add_network">Add Wi-Fi network</string>
    <string name="wifi_access_points">Wi-Fi networks</string>
    <string name="wifi_menu_scan">Scan</string>
    <string name="wifi_menu_advanced">Advanced</string>
    <string name="wifi_menu_connect">Connect to network</string>
    <string name="wifi_menu_forget">Forget network</string>
    <string name="wifi_menu_modify">Modify network</string>
    <string name="wifi_filter">WiFi Filter</string>
    <string name="wifi_filter_only_open_summary">Only display open networks</string>
    <string name="wifi_filter_all_summary">Display all networks</string>
    <string name="hub_login_success">Login Successfully</string>
    <string name="hub_login_failure">Login Failure</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_signal">Signal strength</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_speed">Link speed</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="please_select_phase2">Phase 2 authentication</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_eap_identity">Identity</string>
    <string name="wifi_eap_anonymous">Anonymous identity</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password.</string>
    <string name="wifi_unchanged">(unchanged)</string>
    <string name="wifi_unspecified">(unspecified)</string>
    <string name="wifi_remembered">Remembered</string>
    <string name="wifi_disabled">Disabled</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_secured">Secured with %1$s</string>
    <string name="wifi_secured_with_status">%2$s, secured with %1$s</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_forget">Forget</string>
    <string name="wifi_save">Save</string>
    <string name="wifi_cancel">Cancel</string>
    <string name="wifi_user_name">Name</string>
    <string name="hub_login_anonymous">Anonymous Login</string>
    <string name="wifi_account_settings">Account Settings</string>
    <string name="connection_info_login">Log in</string>
    <string name="connection_info_back">Back</string>
    <string name="wifi_add_account">Click to add an account</string>
    <string name="wifi_edit_account">Current Account： %1$s</string>
    <string name="wifi_current_version">Current Version： %1$s</string>
    <string name="wifi_current_account_txt">Current Account</string>
    <string name="wifi_phone_number">Phone Number</string>
    <string name="wifi_account_dialog_edit">Edit</string>
    <string name="wifi_account_dialog_save">Save</string>
    <string name="wifi_account_dialog_delete">Delete</string>
    <string name="wifi_account_dialog_cancel">Cancel</string>
    <string name="wifi_notification_login_successful">Connect Successfully</string>
    <string name="wifi_notification_login_failure">Connect failure</string>
    <string name="wifi_auto_login_title">Enable Auto Login</string>
    <string name="wifi_auto_login_summary">Login automatically with save account when find available Wi-Fi</string>
    <string name="wifi_enable_notification_title">Enable Notification</string>
    <string name="wifi_enable_notification_summary">Show notification in status bar when login successfully</string>
    <string name="wifi_enable_show_channel_title">Show Channel</string>
    <string name="wifi_enable_show_channel_summary">Show Channel in the Wifi List</string>
    <string name="wifi_enable_show_rssi_title">Show dBm values</string>
    <string name="wifi_enable_show_rssi_summary">Show dBm values in the Wifi List</string>
    <string name="wifi_settings_logout">Login Status</string>
    <string name="wifi_login_successfully_status">Have Logined ShiXun Network. Click to check detail</string>
    <string name="wifi_logout_successfully_status">Have Logouted ShiXun Network, Click to login</string>
    <string name="wifi_cannot_login_status">Cannot find ShiXun Network</string>
    <string name="wifi_not_need_login_status">Have Connected Internet(not via Shixun Server).</string>
    <string name="wifi_no_wifi_status">No WiFi Connection</string>
    <string name="wifi_loging_status">Loging to ShiXun Network\u2026</string>
    <string name="wifi_logouting_status">Logouting from ShiXun Network\u2026</string>
    <string name="wifi_checking_status">Checking network status\u2026</string>
    <string name="wifi_login_fail_status">Login Failed, Click to retry</string>
    <string name="wifi_login_unknow_status">Cannot get the login status, Click to check again</string>
    <string name="wifi_no_connection_satus">No Connection to internet</string>
    <string name="wifi_second_checking_satus">Have connected the internet, checking whether it is 591 wifi\u2026</string>
    <string name="wifi_configure_gateway">Configure Gateway</string>
    <string name="wifi_gateway_name">Input Gateway Address</string>
    <string name="wifi_login_success_toast">Have Logged into ShiXun Network</string>
    <string name="wifi_logout_success_toast">Have logget out from ShiXun Network</string>
    <string name="wifi_change_account_toast">Login Failure, Try another account</string>
    <string name="wifi_login_failure_unkown_reason">Login Failure, Please try again later</string>
    <string name="wifi_login_failure_with_reason">Login Failure, reson:</string>
    <string name="wifi_check_wifi_settings">Enter settings</string>
    <string name="wifi_constom_call">Call:</string>
    <string name="wifi_constom_hotline">Custom Hotline:400&#8211;080&#8211;9500</string>
    <string name="settings_wifi_filter_mode_title">Choose the filter mode</string>
    <string name="share_information">I am visiting internet with ShiXun Wifi for free, you also can do this like me! See detail information in:http://www.591wifi.com</string>
    <string name="wifi_enable_show_notification_summary">Show all messages in Status Bar and notificaton</string>
    <string name="wifi_enable_show_notification_title">Show Service Nofitcation</string>
    <string name="wifi_service_notificaion_no_wifi">No Wifi Connection</string>
    <string name="wifi_service_notificaion_connect_wifi">Have connected%1$s</string>
    <string name="wifi_service_notification_login_wifi">Have logged in%1$s</string>
    <string name="update_no_avail_dick_toast">No Avail Disk</string>
    <string name="update_no_enough_space_toast">No enough space in SD Card</string>
    <string name="update_download_error_toast">Download update apk error!</string>
    <string name="update_start_download_toast">Start to download apk</string>
    <string name="update_unknown_error_toast">Unknown error happened!</string>
    <string name="update_downloading_package">Downloading the update package\u2026</string>
    <string name="update_update_url_wrong">Wrong update pakcage Url</string>
    <string name="update_not_need_update">Your application is newest, no need update</string>
    <string name="update_content_message">Update Content:</string>
    <string name="update_background_update">Update in Backgroud</string>
    <string name="update_find_new_version_msg">Have found a new version. Could you want to update?</string>
    <string name="update_find_new_version_title">Update confirm</string>
    <string name="connection_info_logout">Logout</string>
    <string name="connection_login_start_time">Start From</string>
    <string name="connection_login_time">Login Time</string>
    <string name="connection_info_dialog_title">Connection Info</string>
    <string name="connection_data_traffic_info">Data Tarffic</string>
    <string name="person_centre_register">Register</string>
    <string name="about_us">北京时讯遨游网络科技有限公司创立于2010年12月，致力于无线WiFi网络设备研发、无线WiFi网络组网方案提供、无线WiFi媒体运营的新技术企业。
公司由一批在宽带网业界从事多年的人士发起创建，凭借团队多年来服务于IT行业的技术实力和丰富的行业资源，为客户提供一流的产品、技术和服务。</string>
    <string name="wifi_register_welcome_info">Welcome to register 591:</string>
    <string name="wifi_register_phone_number">Phone number:</string>
    <string name="wifi_register_phone_tip">11 phone numbers</string>
    <string name="wifi_register_get_token">get the token</string>
    <string name="wifi_register_token_info">Token:</string>
    <string name="wifi_register_token_tip">Please input the SMS Token</string>
    <string name="wifi_register_password">Password:</string>
    <string name="wifi_register_username">User name:</string>
    <string name="wifi_register_password_tip">setting your password</string>
    <string name="wifi_register_username_tip">setting your username</string>
    <string name="wifi_register_submit">Submit register info</string>
    <string name="wifi_feedback_welcome">Welcome your any advices, your feedbacks are very important!</string>
    <string name="wifi_feedback_title_tips">Please input title</string>
    <string name="wifi_feedback_content_tips">Please input feedback</string>
    <string name="wifi_feedback_address_tips">Please provide your mail address</string>
    <string name="wifi_feedback_submit">Submit</string>
</resources>