<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainview_backgroud_color"
    android:orientation="vertical" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/WifiTextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_item_margin"
            android:text="@string/wifi_feedback_welcome" />

        <EditText
            android:id="@+id/wifi_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_item_margin"
            android:layout_marginRight="@dimen/general_item_margin"
            android:hint="@string/wifi_feedback_title_tips"
            android:inputType="text" />

        <EditText
            android:id="@+id/wifi_feedback_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_height"
            android:layout_marginLeft="@dimen/general_item_margin"
            android:layout_marginRight="@dimen/general_item_margin"
            android:layout_marginTop="@dimen/person_info_marge"
            android:gravity="start|top"
            android:hint="@string/wifi_feedback_content_tips"
            android:inputType="text" />
        <EditText
            android:id="@+id/wifi_feedback_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_item_margin"
            android:layout_marginRight="@dimen/general_item_margin"
            android:layout_marginTop="@dimen/person_info_marge"
            android:gravity="start|top"
            android:hint="@string/wifi_feedback_address_tips"
            android:inputType="text" />
        
         <Button
            android:id="@+id/wifi_feedback_submit"
            style="@style/WifiGeneralButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_item_margin"
            android:minHeight="@dimen/general_item_small_image_width"
            android:text="@string/wifi_feedback_submit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/general_text_color" />
    </LinearLayout>

</ScrollView>