<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="300sp"
         android:layout_height="wrap_content">

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:orientation="vertical">

        <LinearLayout android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/wifi_ssid" />

            <EditText android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textNoSuggestions" />

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/wifi_security" />

            <Spinner android:id="@+id/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/wifi_security"
                android:entries="@array/wifi_security" />
        </LinearLayout>

        <LinearLayout android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout android:id="@+id/eap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:text="@string/wifi_eap_method" />

                <Spinner android:id="@+id/method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/wifi_eap_method"
                    android:entries="@array/wifi_eap_method" />

                <TextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/please_select_phase2" />

                <Spinner android:id="@+id/phase2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/please_select_phase2"
                    android:entries="@array/wifi_phase2_entries" />

                <TextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:text="@string/wifi_eap_ca_cert" />

                <Spinner android:id="@+id/ca_cert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/wifi_eap_ca_cert" />

                <TextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:text="@string/wifi_eap_user_cert" />

                <Spinner android:id="@+id/user_cert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/wifi_eap_user_cert" />

                <TextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:text="@string/wifi_eap_identity" />

                <EditText android:id="@+id/identity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions" />

                <TextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:text="@string/wifi_eap_anonymous" />

                <EditText android:id="@+id/anonymous"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions" />
            </LinearLayout>

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:text="@string/wifi_password" />

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword" />

            <CheckBox android:id="@+id/show_password"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_show_password" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
