<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainview_backgroud_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/filter_container_sider"
        android:orientation="vertical"
        android:padding="18dip" >

        <LinearLayout
            android:id="@+id/account_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wifi_current_account_txt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/current_account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="false"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_input_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/account_name_label"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:text="@string/wifi_user_name" />

            <EditText
                android:id="@+id/account_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/account_pwd_label"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:text="@string/wifi_password" />

            <EditText
                android:id="@+id/account_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/account_show_password"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_show_password" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connect_status_logout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/person_info_marge"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/account_dialog_save"
            style="@style/WifiGeneralButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/wifi_account_dialog_save" />

        <Button
            android:id="@+id/account_dialog_register"
            style="@style/WifiGeneralButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/person_centre_register" />

        <Button
            android:id="@+id/account_dialog_cancel"
            style="@style/WifiGeneralButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/wifi_account_dialog_cancel" />
    </LinearLayout>

</LinearLayout>