<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_item_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/about_us_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_item_margin"
            android:text="@string/about_us"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/general_item_margin"
                android:text="@string/wifi_constom_call"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/call_button_background"
                android:text="@string/wifi_constom_hotline" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>